--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Alex+Brush|Dancing+Script|Great+Vibes|Kaushan+Script|Marck+Script|Playball');
 /* Required height of parents of the Full Page Carousel for proper displaying carousel itself */
 html,
 body,
@@ -31,3 +32,10 @@ body,
 /* Footer color for sake of consistency with Navbar */
 .page-footer {
   background-color: #1C2331; }
+
+
+/* ESTILOS PROPIOS DE LA PAGINA*/
+.titulo {
+  color: #ec407a;
+  font-family: 'Alex Brush', cursive;
+}
